welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:2: error: value &&! is not a member of Boolean
	if ((!weekday&&!vacation) || (!weekday&&vacation)) { return true }
                     ^